UtahLiveDataTest/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantTypeOther__c</fullName>
        <description>If the Applicant Type is other than the one specified in the available list of the values</description>
        <label>Applicant Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantType__c</fullName>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>County governments</fullName>
                </value>
                <value>
                    <fullName>State governments</fullName>
                </value>
                <value>
                    <fullName>City or township governments</fullName>
                </value>
                <value>
                    <fullName>Special district governments</fullName>
                </value>
                <value>
                    <fullName>School Districts</fullName>
                </value>
                <value>
                    <fullName>Private School</fullName>
                </value>
                <value>
                    <fullName>Charter School</fullName>
                </value>
                <value>
                    <fullName>State institutions for higher education</fullName>
                </value>
                <value>
                    <fullName>Private institutions of higher education</fullName>
                </value>
                <value>
                    <fullName>Public housing authorities</fullName>
                </value>
                <value>
                    <fullName>Nonprofits having a 501 (C)(3)</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Victim Services</fullName>
                </value>
                <value>
                    <fullName>Tribal Entity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingDemographics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Demographics</label>
        <referenceTo>USDemographicInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CFDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CharterFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildRecordCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Keeps the count of number of childs belonging to this account</description>
        <inlineHelpText>This field is used to keep track of child count for parent record.</inlineHelpText>
        <label>Child Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCSupplySchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LocalSupplySchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNSExpirationDate__c</fullName>
        <label>DUNS/SAMS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisableActivateButton__c</fullName>
        <description>Button logic to hide the Activate button on the Internal organization</description>
        <formula>if(ISPICKVAL(Status__c , &apos;Active&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Activate Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableChildOrganizationTable__c</fullName>
        <formula>ChildRecordCount__c  &lt; 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisableChildOrganizationTable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableDeactivateButton__c</fullName>
        <formula>if(ISPICKVAL(Status__c , &apos;Inactive&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Deactivate Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayDeleteButton__c</fullName>
        <formula>NOT($Profile.Name = &apos;System Administrator&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Delete Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayEditButton__c</fullName>
        <formula>ExternalUserOwner__c != $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplaySubmitForApprovalButton__c</fullName>
        <formula>NOT(AND(OR(TEXT( Status__c) = &apos;In Progress&apos; , TEXT( Status__c) = &apos;Change Requested&apos; ) , $Profile.Name = &apos;System Administrator&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls the display of the Submit for Approval Button. If the Organization Status is &apos;In Progress&apos; or &apos;Change Requested&apos; and User Type is &apos;Standard&apos; display the Submit for Approval Button</inlineHelpText>
        <label>Display Submit For Approval Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EINText__c</fullName>
        <label>EIN Text</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalUserOwner__c</fullName>
        <inlineHelpText>Id of the external user who has registered for this organization</inlineHelpText>
        <label>External User Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINETCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>FINETCode</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINETDeptCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>FINET Department Code</description>
        <externalId>true</externalId>
        <label>FINETDeptCode</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FederalAssuranceForm__c</fullName>
        <description>This is the URL for the Federal Assurance form.</description>
        <inlineHelpText>This is the URL for the Federal Assurance form.</inlineHelpText>
        <label>Federal Assurance Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FederalGSASchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is copied over over to hte User Registration object  11/201/2015</description>
        <label>Are you in Federal GSA Schedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FedralGSASchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FedralGSASchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullBillingAddress__c</fullName>
        <formula>BillingStreet + BR() + BillingCity + &apos; &apos; + BillingState + &apos; &apos; + BillingPostalCode + BR() + BillingCountry</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__DepartmentLogoDocumentName__c</fullName>
        <description>This field contains document name for the header logo which will be displayed as Dept. logo at header</description>
        <label>Department Logo Document Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__LetterHeadDeveloperName__c</fullName>
        <description>Developer Name of letterhead</description>
        <label>Letter Head Developer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNT__RoleCode__c</fullName>
        <label>Role Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gov_Id__c</fullName>
        <label>Gov Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupCode__c</fullName>
        <description>To group all the accounts and for user lookup of the Agencies</description>
        <label>Group Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasEditAccess__c</fullName>
        <formula>OR($User.IsKeyContact__c, $Profile.Name == &apos;EXE&apos;, $Profile.Name == &apos;System Administrator&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasEditAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Draft&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfLEA__c</fullName>
        <formula>IF(LEA_Id__c = null, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfLEA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfNotLEA__c</fullName>
        <formula>IF(LEA_Id__c = null, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfNotLEA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitiateDebarmentProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for debarment process</description>
        <label>Initiate Debarment Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <externalId>true</externalId>
        <label>InternalUniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActiveAgency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExtensionAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed is being used on grantor ---&gt; planning --&gt;  manage recipient</description>
        <label>Is Extension Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGrantingAgency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Granting Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEA_Id__c</fullName>
        <label>LEA_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>To specify the latitude and longitude for the Account where it is located</description>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>NumberOfApplications__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Applications</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofAnnouncements__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Announcements which are associated with this Federal/State Account</description>
        <label># Announcements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofAwards__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Grants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrganizationFiscalYearEndDate__c</fullName>
        <label>OrganizationFiscalYearEndDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationFiscalYearStartDate__c</fullName>
        <label>OrganizationFiscalYearStartDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationID__c</fullName>
        <label>OrganizationID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <formula>If(RecordType.Name=&apos;External&apos;,&apos;Federal&apos;,
 If(RecordType.Name=&apos;Internal&apos;,&apos;State&apos;,
  If(RecordType.Name=&apos;NGO&apos;,&apos;NGO&apos;,
   If(RecordType.Name=&apos;Recipient&apos;,&apos;Recipient&apos;,
    If(RecordType.Name=&apos;Reviewer&apos;,&apos;Reviewer&apos;,&apos;Other&apos;
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerEmail__c</fullName>
        <description>This field use to send email to owner. Due to security issue we are not able to access owner email.</description>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccountText__c</fullName>
        <formula>Parent.Name</formula>
        <label>Parent Account Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentName__c</fullName>
        <formula>IF(ISBLANK(Parent.Id), &apos;&apos;, HYPERLINK( (&apos;/&apos; + Parent.Id ), Parent.Name , &apos;_self&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointofContactUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Primary Applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCInformed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created for the debarment of recipient organizations.</description>
        <label>Primary POC Informed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCLastName__c</fullName>
        <label>PrimaryPOCLastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <label>Rationale</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonsForDebarment__c</fullName>
        <description>This field is created for the debarment of recipient organizations.</description>
        <label>Reasons For Debarment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SITE_LOC_CD__c</fullName>
        <label>Site Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sams__c</fullName>
        <description>This is the filed created to for SAMS number of a recipient organization.</description>
        <label>Sams Registration Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingDemographics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Demographics</label>
        <referenceTo>USDemographicInfo__c</referenceTo>
        <relationshipLabel>Accounts (Shipping Demographics)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteLocation__c</fullName>
        <label>Site Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Review in Progress</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Debarred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupplySchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you in State Supply Schedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>TestField</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThemeName__c</fullName>
        <inlineHelpText>Refers to the theme name which is stored in Theme Config custom setting. It is applicable only for internal users.</inlineHelpText>
        <label>Theme Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitCode__c</fullName>
        <label>Unit Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserBA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BA for the LEA Org, for use in internal approvals</description>
        <label>UserBA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserRegistration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization/User Registration</label>
        <referenceTo>UserRegistration__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VendorId__c</fullName>
        <label>Vendor Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>checkKeyPOC__c</fullName>
        <formula>$User.IsExternalUser__c=true &amp;&amp; $User.IsKeyContact__c = false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>checkKeyPOC</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Code__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Abbreviation__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>DUNS__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.External</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>This is an External Account such as Federal Grants</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>This is an Internal Organization which purchases GovGrants</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO</fullName>
        <active>true</active>
        <description>Non government organizations like  Bill Gates Foundation etc</description>
        <label>NGO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recipient</fullName>
        <active>true</active>
        <description>This is a Partner Account</description>
        <label>Recipient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reviewers</fullName>
        <active>true</active>
        <description>All the reviewers will be belong to this account</description>
        <label>Reviewers</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FiscalYearEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OrganizationFiscalYearEndDate__c != null, NOT(REGEX(OrganizationFiscalYearEndDate__c, &quot;(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])&quot;)), false)</errorConditionFormula>
        <errorMessage>Fiscal Year End Date Must Have MM/DD Format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FiscalYearStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OrganizationFiscalYearStartDate__c != null, NOT(REGEX(OrganizationFiscalYearStartDate__c, &quot;(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])&quot;)), false)</errorConditionFormula>
        <errorMessage>Fiscal Year Start Date Must Have MM/DD Format</errorMessage>
    </validationRules>
</CustomObject>